fix: more gaps between text and button

--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ div.about{
     color: white;
     align-items: center;
     justify-content: space-between;
-    gap: 24px;
+    gap: 100px;
     padding: 48px 100px;
     
 }
